<resources>
    <string name="app_name">Stock_App</string>
    //MainActivity-Buttons
    <string name="textheader">Main Menu</string>
    <string name="buttonoverview">Overview</string>
    <string name="buttondetailpage">Detailpage</string>
    <string name="buttonwatchlist">Watchlist</string>
    //SearchableStock
    <string name="SearchableListView">Search for your Stock or click it below!</string>

    <string name="sample_price">$231.31</string>
    <string name="sample_symbol">SPOT</string>
    <string name="sample_name">Spotify</string>
    <string name="sample_daily_change">2.32%</string>
    <string name="stock_overview">Stock Overview</string>
    <string name="amazon">Amazon</string>
    <string name="dummy">Dummy</string>
    <string name="Login_text">Willkommen in Ihrer StockApp!</string>
    <string name="editTextEmail">Email-Adresse</string>
    <string name="editTextPasswort">Passwort</string>
    <string name="editTextPasswortBestatigen">Passwort bestätigen</string>
    <string name="btnTextSignUp">Sign up!</string>
    <string name="btnTextLogin">Login!</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="detial_description">Apple Inc. designs, manufactures, and markets smartphones, personal computers, tablets, wearables, and accessories worldwide. It also sells various related services. In addition, the company offers iPhone, a line of smartphones; Mac, a line of personal computers; iPad, a line of multi-purpose tablets; AirPods Max, an over-ear wireless headphone; and wearables, home, and accessories comprising AirPods, Apple TV, Apple Watch, Beats products, HomePod, and iPod touch. Further, it provides AppleCare support services; cloud services store services; and operates various platforms, including the App Store that allow customers to discover and download applications and digital content, such as books, music, video, games, and podcasts. Additionally, the company offers various services, such as Apple Arcade, a game subscription service; Apple Music, which offers users a curated listening experience with on-demand radio stations; Apple News+, a subscription news and magazine service; Apple TV+, which offers exclusive original content; Apple Card, a co-branded credit card; and Apple Pay, a cashless payment service, as well as licenses its intellectual property. The company serves consumers, and small and mid-sized businesses; and the education, enterprise, and government markets. It distributes third-party applications for its products through the App Store. The company also sells its products through its retail and online stores, and direct sales force; and third-party cellular network carriers, wholesalers, retailers, and resellers. Apple Inc. was incorporated in 1977 and is headquartered in Cupertino, California.</string>
    <string name="editTextFirstName">Firstname</string>
    <string name="editTextLastname">Lastname</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer</string>

    <string-array name="company_name">
        <item>Apple</item>
        <item>Microsoft</item>
        <item>Amazon</item>
        <item>Facebook</item>
        <item>Alphabet</item>
        <item>Tesla</item>
        <item>Berkshire Hathaway</item>
        <item>NVIDIA</item>
        <item>JPMorgan Chase</item>
        <item>Johnson &amp; Johnson</item>
        <item>Visa</item>
        <item>UnitedHealth Group</item>
        <item>Paypal</item>
        <item>Home Depot</item>
        <item>Procter &amp; Gamble</item>
        <item>Mastercard</item>
        <item>Walt Disney</item>
        <item>Bank of America</item>
    </string-array>

    <string-array name="ticker">
        <item>AAPL</item>
        <item>MSFT</item>
        <item>AMZN</item>
        <item>FB</item>
        <item>GOOG</item>
        <item>TSLA</item>
        <item>BRK.B</item>
        <item>NVDA</item>
        <item>JPM</item>
        <item>JNJ</item>
        <item>V</item>
        <item>UNH</item>
        <item>PYPL</item>
        <item>HD</item>
        <item>PG</item>
        <item>MA</item>
        <item>DIS</item>
        <item>BAC</item>
    </string-array>

</resources>